test/functions/vass/main-returns-type.good
main-returns-type.chpl:4: error: main function cannot return a type or a param
