test/functions/vass/main-returns-type.chpl

proc hi() { writeln("hello"); }

proc main() type {
  hi();
  return int;
}
